[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsm-python-api"
version = "0.3.0"
description = "Async Python bindings for Jira Service Management API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stanislav Ulrych", email = "stanislav.ulrych@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/stanislavulrych/jsm-python-api"
"Bug Tracker" = "https://github.com/stanislavulrych/jsm-python-api/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/jsm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
